Bug 169553 - FILESAVE PPTX Paragraphs aligned to "Start" become centered in PP
Summary: FILESAVE PPTX Paragraphs aligned to "Start" become centered in PP
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Paragraph
  Show dependency treegraph
 
Reported: 2025-11-19 19:57 UTC by Gabor Kelemen (Collabora)
Modified: 2025-12-08 17:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The original example file in Impress and its PPTX version in PP (105.12 KB, image/png)
2025-11-19 19:57 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-11-19 19:57:29 UTC
Created attachment 204113 [details]
The original example file in Impress and its PPTX version in PP

This is related to bug 169524

There are some paragraphs in a textbox with "Start" alignment, this becomes Centered when the file is saved as PPTX and opened in PP - but not in Impress.

1. Open attachment 204073 [details]
2. Save as PPTX
3. Reload in Impress
-> First and last paragraphs are still left aligned visually
4. Open the PPTX in PP
-> First and last paragraphs are centered

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c8fa51cec19eb89ef1506adfd461e5fdbcb4477a
CPU threads: 32; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

This is similar to bug 169279 but still valid in master; started with:

commit 629105991ee77335f856d746ef44408414cc150a
Author: Balazs Varga <balazs.varga@collabora.com>
Date:   Fri Aug 29 11:00:19 2025 +0200

    Related: tdf#111927 - PPTX: fix placeholder title text becomes small
    
    after clicking in&out
Comment 1 Commit Notification 2025-12-04 14:00:13 UTC
karthik committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8a27d5874b61eead4f0b896ca5f1be9544e26e12

tdf#169553: Fix export of 'algn' in PPTX

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Gabor Kelemen (Collabora) 2025-12-08 17:14:02 UTC
Tested with

Version: 26.2.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 5e164e65d873d53ec36dce4672c2399a05eaa38c
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Now the paragraphs are exported correctly as left aligned.

The regression causing commit was not backported to 25.8, so no backport seems to be necessary.