tdf#169553: Fix export of 'algn' in PPTX

"algn" element is not properly exported in PPTX.
5d1b2baaa96fce2cc283e4d383bcfca70651b2da commit introduces "Start" and
"End" pararaph alignments, but these are not handled in PPTX export.

Change-Id: I9ed13a5a08c81676810d099d90dfeec0e2727689
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194972
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins